Crash on motion tracking when dopesheet open and deleting track #62321

Closed
opened 2019-03-07 16:37:52 +01:00 by Arto Kitula · 15 comments

dopesheet_draw_region crashes, seems to try to draw just deleted track data.

  1. Have VFX->Motion tracking open (movie clip editor and dopesheet open same time)
  2. Delete track from movie editor.

version: 2.80 (sub 47), branch: master, commit date: 2019-03-07 14:07, hash: ed24315c63, type: Debug
build date: 2019-03-07, 16:44:55
platform: Darwin

tracking-crash.blend

trackpoint0001-0050.mkv

tracking-crash.crash.txt

dopesheet_draw_region crashes, seems to try to draw just deleted track data. 1) Have VFX->Motion tracking open (movie clip editor and dopesheet open same time) 2) Delete track from movie editor. version: 2.80 (sub 47), branch: master, commit date: 2019-03-07 14:07, hash: ed24315c6309, type: Debug build date: 2019-03-07, 16:44:55 platform: Darwin [tracking-crash.blend](https://archive.blender.org/developer/F6779857/tracking-crash.blend) [trackpoint0001-0050.mkv](https://archive.blender.org/developer/F6779856/trackpoint0001-0050.mkv) [tracking-crash.crash.txt](https://archive.blender.org/developer/F6779859/tracking-crash.crash.txt)
Author

Added subscriber: @ArtoKitula

Added subscriber: @ArtoKitula

#59050 was marked as duplicate of this issue

#59050 was marked as duplicate of this issue

#58773 was marked as duplicate of this issue

#58773 was marked as duplicate of this issue

#58671 was marked as duplicate of this issue

#58671 was marked as duplicate of this issue
Dalai Felinto was assigned by Arto Kitula 2019-03-07 16:38:17 +01:00

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Yep, crash confirmed. (Linux, GTX 1080, 2.80, ed24315c63)

Yep, crash confirmed. (Linux, GTX 1080, 2.80, ed24315c6309)

Added subscriber: @Sergey

Added subscriber: @Sergey

@ArtoKitula and @sebastian_k I cannot reproduce it either on the mentioned hash, or the latest 2.8. Any change you get me a backtrace?
@Sergey can you reproduce in your end?

@ArtoKitula and @sebastian_k I cannot reproduce it either on the mentioned hash, or the latest 2.8. Any change you get me a backtrace? @Sergey can you reproduce in your end?

Hm, can't reproduce either anymore. weird...

Hm, can't reproduce either anymore. weird...
Author

No instant crash anymore, track stays still on dopesheet, though.
That is gone if doing select all (even there is no tracks available).
Crash occurs now if there is track on dopesheet, but not on movie clip.
So:

create tracking point,
track it,
delete it,
create again -> crash

(and this was on fresh 2.8, built before testing)

No instant crash anymore, track stays still on dopesheet, though. That is gone if doing select all (even there is no tracks available). Crash occurs now if there is track on dopesheet, but not on movie clip. So: create tracking point, track it, delete it, create again -> crash (and this was on fresh 2.8, built before testing)

This issue was referenced by 96db46d17c

This issue was referenced by 96db46d17c77ed1a463d8926393ed27f9a4a038d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @edwardcomeau, @lichtwerk

Added subscribers: @edwardcomeau, @lichtwerk

Added subscribers: @Aiduss, @JacquesLucke

Added subscribers: @Aiduss, @JacquesLucke

Added subscribers: @Ariastrasza, @StephenSwaney

Added subscribers: @Ariastrasza, @StephenSwaney
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62321
No description provided.